기본적인 라우팅 이후, viewsEJS header, footer 적용

--- a/nodeExEjs1_backend/package.json
+++ b/nodeExEjs1_backend/package.json
@@ -1,9 +1,10 @@
 {
   "name": "nodeexejs1-backend",
   "version": "0.0.0",
+  "description": "",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon app.js"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
